# protofacekit-controller

./: Cargo.toml  README.md  cspell.json  espflash.toml  partition_table.csv
models/: case.3mf
src/: bluetooth.rs  data.rs  face_control.rs  hub75.rs  lib.rs  main.rs  microphone.rs  neopixel.rs  proximity.rs
src/bluetooth/: gatt.rs  mod.rs  storage.rs
