[package]
edition      = "2024"
name         = "protofacekit-controller"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "protofacekit-controller"
path = "./src/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "unstable",
] }
trouble-host = { version = "0.5.0", features = ["gatt", "derive"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embedded-hal-async = "1.0.0"

blinksy = { version = "0.11.0", features = ["defmt", "async"] }
blinksy-esp = { version = "0.11.0", features = ["esp32s3", "async", "defmt"] }



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
